@@ -1,21 +1,68 @@
 package com.gtt.gttcore.integration.jei;
 
+import com.gregtechceu.gtceu.GTCEu;
+import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.common.data.GTMachines;
+import com.gregtechceu.gtceu.common.data.GTRecipeTypes;
 import com.gtt.gttcore.GTTCore;
 import com.gtt.gttcore.api.particle.ParticleStack;
 import com.gtt.gttcore.api.registry.GTTRegistries;
 import com.gtt.gttcore.integration.jei.particle.ParticleIngredientHelper;
 import com.gtt.gttcore.integration.jei.particle.ParticleIngredientRenderer;
+import com.simibubi.create.AllBlocks;
+import com.simibubi.create.AllRecipeTypes;
+import com.simibubi.create.compat.jei.CreateJEI;
+import com.simibubi.create.compat.jei.DoubleItemIcon;
+import com.simibubi.create.compat.jei.EmptyBackground;
+import com.simibubi.create.compat.jei.ItemIcon;
+import com.simibubi.create.compat.jei.category.CreateRecipeCategory;
+import com.simibubi.create.compat.jei.category.CrushingCategory;
+import com.simibubi.create.compat.jei.category.MixingCategory;
+import com.simibubi.create.content.kinetics.crusher.AbstractCrushingRecipe;
+import com.simibubi.create.content.kinetics.crusher.CrushingRecipe;
+import com.simibubi.create.content.kinetics.millstone.MillingRecipe;
+import com.simibubi.create.content.processing.basin.BasinRecipe;
+import com.simibubi.create.foundation.item.ItemHelper;
+import com.simibubi.create.foundation.recipe.IRecipeTypeInfo;
+import com.simibubi.create.foundation.utility.CreateLang;
+import com.simibubi.create.infrastructure.config.AllConfigs;
+import com.simibubi.create.infrastructure.config.CRecipes;
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
+import mezz.jei.api.gui.drawable.IDrawable;
+import mezz.jei.api.recipe.category.IRecipeCategory;
 import mezz.jei.api.registration.IModIngredientRegistration;
+import mezz.jei.api.registration.IRecipeCatalystRegistration;
+import mezz.jei.api.registration.IRecipeCategoryRegistration;
+import mezz.jei.api.registration.IRecipeRegistration;
+import net.createmod.catnip.config.ConfigBase;
 import net.minecraft.MethodsReturnNonnullByDefault;
+import net.minecraft.client.Minecraft;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeType;
+import net.minecraft.world.level.ItemLike;
 
-import java.util.stream.Collectors;
+import javax.annotation.ParametersAreNonnullByDefault;
+import java.util.*;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
+
+import static com.gregtechceu.gtceu.api.GTValues.*;
+import static com.gtt.gttcore.util.RecipeUtil.*;
 
 @JeiPlugin
 @MethodsReturnNonnullByDefault
+@ParametersAreNonnullByDefault
+@SuppressWarnings("unused")
 public class GTTJEIPlugin implements IModPlugin {
+
+    private final List<CreateRecipeCategory<?>> allCategories = new ArrayList<>();
+
     @Override
     public ResourceLocation getPluginUid() {
         return GTTCore.id("jei_plugin");
@@ -23,6 +70,256 @@ public class GTTJEIPlugin implements IModPlugin {
 
     @Override
     public void registerIngredients(IModIngredientRegistration registration) {
-        registration.register(GTTTypes.PARTICLE_TYPE, GTTRegistries.PARTICLE_TYPES.values().stream().map(particleType -> new ParticleStack(particleType, 1)).collect(Collectors.toList()), new ParticleIngredientHelper(), new ParticleIngredientRenderer());
+        registration.register(GTTTypes.PARTICLE_TYPE, GTTRegistries.PARTICLE_TYPES.values().stream().map(particleType -> new ParticleStack(particleType, 1)).toList(), new ParticleIngredientHelper(), new ParticleIngredientRenderer());
+    }
+
+    @Override
+    public void registerCategories(IRecipeCategoryRegistration registration) {
+        IModPlugin.super.registerCategories(registration);
+        if (!GTCEu.Mods.isCreateLoaded()) return;
+        allCategories.clear();
+        CreateRecipeCategory<?>
+                autoGregTechMixing = builder(BasinRecipe.class)
+                .addAllRecipesIf(r -> r instanceof GTRecipe gtRecipe
+                                && gtRecipe.recipeType == GTRecipeTypes.MIXER_RECIPES && gtRecipe.getInputEUt().voltage() <= V[ULV],
+                        recipe -> convertGregTechToCreate((GTRecipe) recipe, BasinRecipe::new))
+                .catalyst(AllBlocks.MECHANICAL_MIXER::get)
+                .catalyst(AllBlocks.BASIN::get)
+                .doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), GTMachines.MIXER[LV].asStack().getItem())
+                .emptyBackground(177, 85)
+                .build("automatic_gregtech_mixing", MixingCategory::autoShapeless);
+        CreateRecipeCategory<?>
+                autoGregTechCrushing = builder(AbstractCrushingRecipe.class)
+                .addAllRecipesIf(r -> r instanceof GTRecipe gtRecipe
+                                && gtRecipe.recipeType == GTRecipeTypes.MACERATOR_RECIPES && gtRecipe.getInputEUt().voltage() <= V[ULV],
+                        recipe -> convertGregTechToCreate((GTRecipe) recipe, CrushingRecipe::new))
+                .catalyst(AllBlocks.CRUSHING_WHEEL::get)
+                .doubleItemIcon(AllBlocks.CRUSHING_WHEEL.get(), GTMachines.MACERATOR[LV].asStack().getItem())
+                .emptyBackground(177, 85)
+                .build("automatic_gregtech_crushing", CrushingCategory::new);
+        CreateRecipeCategory<?>
+                autoGregTechMilling = builder(AbstractCrushingRecipe.class)
+                .addAllRecipesIf(r -> r instanceof GTRecipe gtRecipe
+                                && gtRecipe.recipeType == GTRecipeTypes.MACERATOR_RECIPES && gtRecipe.getInputEUt().voltage() <= V[ULV],
+                        recipe -> convertGregTechToCreateOnlyFirstOutput((GTRecipe) recipe, MillingRecipe::new))
+                .catalyst(AllBlocks.MILLSTONE::get)
+                .doubleItemIcon(AllBlocks.MILLSTONE.get(), GTMachines.MACERATOR[LV].asStack().getItem())
+                .emptyBackground(177, 85)
+                .build("automatic_gregtech_milling", CrushingCategory::new);
+        registration.addRecipeCategories(allCategories.toArray(IRecipeCategory[]::new));
+    }
+
+    @Override
+    public void registerRecipes(IRecipeRegistration registration) {
+        allCategories.forEach(c -> c.registerRecipes(registration));
+    }
+
+    @Override
+    public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
+        allCategories.forEach(c -> c.registerCatalysts(registration));
+    }
+
+
+    @SuppressWarnings("unchecked")
+    public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
+        Map<ResourceLocation, Recipe<?>> map = Minecraft.getInstance()
+                .getConnection()
+                .getRecipeManager().recipes.get(type);
+        if (map != null)
+            map.values().forEach(recipe -> consumer.accept((T) recipe));
+    }
+
+    public static List<Recipe<?>> getTypedRecipes(RecipeType<?> type) {
+        List<Recipe<?>> recipes = new ArrayList<>();
+        consumeTypedRecipes(recipes::add, type);
+        return recipes;
+    }
+
+    public static List<Recipe<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<Recipe<?>> exclusionPred) {
+        List<Recipe<?>> recipes = getTypedRecipes(type);
+        recipes.removeIf(exclusionPred);
+        return recipes;
+    }
+
+    public static boolean doInputsMatch(Recipe<?> recipe1, Recipe<?> recipe2) {
+        if (recipe1.getIngredients()
+                .isEmpty()
+                || recipe2.getIngredients()
+                .isEmpty()) {
+            return false;
+        }
+        ItemStack[] matchingStacks = recipe1.getIngredients()
+                .get(0)
+                .getItems();
+        if (matchingStacks.length == 0) {
+            return false;
+        }
+        return recipe2.getIngredients()
+                .get(0)
+                .test(matchingStacks[0]);
+    }
+
+    public static boolean doOutputsMatch(Recipe<?> recipe1, Recipe<?> recipe2) {
+        RegistryAccess registryAccess = Minecraft.getInstance().level.registryAccess();
+        return ItemHelper.sameItem(recipe1.getResultItem(registryAccess), recipe2.getResultItem(registryAccess));
+    }
+
+    private <T extends Recipe<?>> CategoryBuilder<T> builder(Class<? extends T> recipeClass) {
+        return new CategoryBuilder<>(recipeClass);
+    }
+
+    private class CategoryBuilder<T extends Recipe<?>> {
+        private final Class<? extends T> recipeClass;
+        private final List<Consumer<List<T>>> recipeListConsumers = new ArrayList<>();
+        private final List<Supplier<? extends ItemStack>> catalysts = new ArrayList<>();
+        private Predicate<CRecipes> predicate = cRecipes -> true;
+        private IDrawable background;
+        private IDrawable icon;
+
+        public CategoryBuilder(Class<? extends T> recipeClass) {
+            this.recipeClass = recipeClass;
+        }
+
+        public CategoryBuilder<T> enableIf(Predicate<CRecipes> predicate) {
+            this.predicate = predicate;
+            return this;
+        }
+
+        public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBase.ConfigBool> configValue) {
+            predicate = c -> configValue.apply(c).get();
+            return this;
+        }
+
+        public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<T>> consumer) {
+            recipeListConsumers.add(consumer);
+            return this;
+        }
+
+        public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends T>> collection) {
+            return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
+        }
+
+        @SuppressWarnings("unchecked")
+        public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
+            return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
+                if (pred.test(recipe))
+                    recipes.add((T) recipe);
+            }));
+        }
+
+        public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred, Function<Recipe<?>, T> converter) {
+            return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
+                if (pred.test(recipe)) {
+                    recipes.add(converter.apply(recipe));
+                }
+            }));
+        }
+
+        public CategoryBuilder<T> addTypedRecipes(IRecipeTypeInfo recipeTypeEntry) {
+            return addTypedRecipes(recipeTypeEntry::getType);
+        }
+
+        public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
+            return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
+        }
+
+        public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
+            return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
+        }
+
+        public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
+            return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
+                if (pred.test(recipe)) {
+                    recipes.add(recipe);
+                }
+            }, recipeType.get()));
+        }
+
+        public CategoryBuilder<T> addTypedRecipesExcluding(Supplier<RecipeType<? extends T>> recipeType,
+                                                           Supplier<RecipeType<? extends T>> excluded) {
+            return addRecipeListConsumer(recipes -> {
+                List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
+                CreateJEI.<T>consumeTypedRecipes(recipe -> {
+                    for (Recipe<?> excludedRecipe : excludedRecipes) {
+                        if (doInputsMatch(recipe, excludedRecipe)) {
+                            return;
+                        }
+                    }
+                    recipes.add(recipe);
+                }, recipeType.get());
+            });
+        }
+
+        public CategoryBuilder<T> removeRecipes(Supplier<RecipeType<? extends T>> recipeType) {
+            return addRecipeListConsumer(recipes -> {
+                List<Recipe<?>> excludedRecipes = getTypedRecipes(recipeType.get());
+                recipes.removeIf(recipe -> {
+                    for (Recipe<?> excludedRecipe : excludedRecipes)
+                        if (doInputsMatch(recipe, excludedRecipe) && doOutputsMatch(recipe, excludedRecipe))
+                            return true;
+                    return false;
+                });
+            });
+        }
+
+        public CategoryBuilder<T> removeNonAutomation() {
+            return addRecipeListConsumer(recipes -> recipes.removeIf(AllRecipeTypes.CAN_BE_AUTOMATED.negate()));
+        }
+
+        public CategoryBuilder<T> catalystStack(Supplier<ItemStack> supplier) {
+            catalysts.add(supplier);
+            return this;
+        }
+
+        public CategoryBuilder<T> catalyst(Supplier<ItemLike> supplier) {
+            return catalystStack(() -> new ItemStack(supplier.get()
+                    .asItem()));
+        }
+
+        public CategoryBuilder<T> icon(IDrawable icon) {
+            this.icon = icon;
+            return this;
+        }
+
+        public CategoryBuilder<T> itemIcon(ItemLike item) {
+            icon(new ItemIcon(() -> new ItemStack(item)));
+            return this;
+        }
+
+        public CategoryBuilder<T> doubleItemIcon(ItemLike item1, ItemLike item2) {
+            icon(new DoubleItemIcon(() -> new ItemStack(item1), () -> new ItemStack(item2)));
+            return this;
+        }
+
+        public CategoryBuilder<T> background(IDrawable background) {
+            this.background = background;
+            return this;
+        }
+
+        public CategoryBuilder<T> emptyBackground(int width, int height) {
+            background(new EmptyBackground(width, height));
+            return this;
+        }
+
+        public CreateRecipeCategory<T> build(String name, CreateRecipeCategory.Factory<T> factory) {
+            Supplier<List<T>> recipesSupplier;
+            if (predicate.test(AllConfigs.server().recipes)) {
+                recipesSupplier = () -> {
+                    List<T> recipes = new ArrayList<>();
+                    for (Consumer<List<T>> consumer : recipeListConsumers)
+                        consumer.accept(recipes);
+                    return recipes;
+                };
+            } else {
+                recipesSupplier = () -> Collections.emptyList();
+            }
+
+            CreateRecipeCategory.Info<T> info = new CreateRecipeCategory.Info<>(
+                    new mezz.jei.api.recipe.RecipeType<>(GTTCore.id(name), recipeClass),
+                    CreateLang.translateDirect("recipe." + name), background, icon, recipesSupplier, catalysts);
+            CreateRecipeCategory<T> category = factory.create(info);
+            allCategories.add(category);
+            return category;
+        }
     }
 }
